--- a/.github/workflows/update-and-deploy.yml
+++ b/.github/workflows/update-and-deploy.yml
@@ -29,6 +29,19 @@ jobs:
           ref: ${{ github.ref_name }}
           fetch-depth: 0
 
+      - name: Compute Pages base URL
+        id: pages
+        run: |
+          OWNER="${{ github.repository_owner }}"
+          REPO="${{ github.event.repository.name }}"
+          if [ "$REPO" = "${OWNER}.github.io" ]; then
+            echo "site_url=https://${OWNER}.github.io" >> "$GITHUB_OUTPUT"
+            echo "path_prefix=/" >> "$GITHUB_OUTPUT"
+          else
+            echo "site_url=https://${OWNER}.github.io" >> "$GITHUB_OUTPUT"
+            echo "path_prefix=/${REPO}/" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -65,6 +78,9 @@ jobs:
 
       - name: Build site
         run: npm run build:site
+        env:
+          SITE_URL: ${{ steps.pages.outputs.site_url }}
+          PATH_PREFIX: ${{ steps.pages.outputs.path_prefix }}
 
       - name: Configure Pages
         uses: actions/configure-pages@v5
