feat(workflow): 支持通过环境变量自定义站点URL和路径前缀
- 添加 SITE_URL_OVERRIDE 和 PATH_PREFIX_OVERRIDE 环境变量支持
- 根据变量值动态计算站点URL和路径前缀
- 优先使用环境变量值，回退到默认GitHub Pages配置

docs: 更新部署指南和自定义域名配置说明

- 添加GitHub Pages部署步骤说明
- 详细说明repo变量设置方法和用途
- 增加Cloudflare自定义域名配置指南
- 解释SSL/TLS配置要求

chore(data): 更新文章索引数据

- 同步最新的文章数据到索引文件
- 按类别分类文章索引更新
- 包含娱乐、健康、科技、科学、世界新闻等类别更新

--- a/.github/workflows/update-and-deploy.yml
+++ b/.github/workflows/update-and-deploy.yml
@@ -31,14 +31,25 @@ jobs:
 
       - name: Compute Pages base URL
         id: pages
+        env:
+          SITE_URL_OVERRIDE: ${{ vars.SITE_URL }}
+          PATH_PREFIX_OVERRIDE: ${{ vars.PATH_PREFIX }}
         run: |
           OWNER="${{ github.repository_owner }}"
           REPO="${{ github.event.repository.name }}"
-          if [ "$REPO" = "${OWNER}.github.io" ]; then
-            echo "site_url=https://${OWNER}.github.io" >> "$GITHUB_OUTPUT"
-            echo "path_prefix=/" >> "$GITHUB_OUTPUT"
+          if [ -n "${SITE_URL_OVERRIDE}" ]; then
+            echo "site_url=${SITE_URL_OVERRIDE}" >> "$GITHUB_OUTPUT"
           else
             echo "site_url=https://${OWNER}.github.io" >> "$GITHUB_OUTPUT"
+          fi
+
+          if [ -n "${PATH_PREFIX_OVERRIDE}" ]; then
+            echo "path_prefix=${PATH_PREFIX_OVERRIDE}" >> "$GITHUB_OUTPUT"
+          elif [ -n "${SITE_URL_OVERRIDE}" ]; then
+            echo "path_prefix=/" >> "$GITHUB_OUTPUT"
+          elif [ "$REPO" = "${OWNER}.github.io" ]; then
+            echo "path_prefix=/" >> "$GITHUB_OUTPUT"
+          else
             echo "path_prefix=/${REPO}/" >> "$GITHUB_OUTPUT"
           fi
 
