``` fix(.github/workflows/update-and-deploy.yml): 配置git用户信息以支持自动化提交
配置github-actions[bot]的用户名和邮箱，确保自动化流程中的git操作能够正确执行，
避免因缺少用户配置而导致的提交失败问题。
```

--- a/.github/workflows/update-and-deploy.yml
+++ b/.github/workflows/update-and-deploy.yml
@@ -35,6 +35,9 @@ jobs:
           BASE_REF="${{ github.ref_name }}"
           DATA_BRANCH="data"
 
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
           git fetch origin "${BASE_REF}"
           git fetch origin "${DATA_BRANCH}" || true
 
