feat(workflow): 添加Google网站验证支持
为GitHub Actions工作流添加GOOGLE_SITE_VERIFICATION环境变量支持，
允许通过变量或密钥配置Google Search Console验证token。

BREAKING CHANGE: 配置变量名从"News Atlas"相关更改为"Cloud Utility Desk"相关

--- a/.github/workflows/update-and-deploy.yml
+++ b/.github/workflows/update-and-deploy.yml
@@ -119,6 +119,7 @@ jobs:
         env:
           SITE_URL: ${{ steps.pages.outputs.site_url }}
           PATH_PREFIX: ${{ steps.pages.outputs.path_prefix }}
+          GOOGLE_SITE_VERIFICATION: ${{ vars.GOOGLE_SITE_VERIFICATION || secrets.GOOGLE_SITE_VERIFICATION }}
           ANALYTICS_PROVIDER: ${{ vars.ANALYTICS_PROVIDER || secrets.ANALYTICS_PROVIDER }}
           CLOUDFLARE_WEB_ANALYTICS_TOKEN: ${{ vars.CLOUDFLARE_WEB_ANALYTICS_TOKEN || secrets.CLOUDFLARE_WEB_ANALYTICS_TOKEN }}
           GA_MEASUREMENT_ID: ${{ vars.GA_MEASUREMENT_ID || secrets.GA_MEASUREMENT_ID }}
