chore(workflow): 调整数据更新部署工作流配置
- 添加push触发器，当main分支有推送时自动执行
- 将定时任务频率从每8小时调整为每4小时执行一次
- 保持原有的手动触发和权限配置不变

--- a/.github/workflows/update-and-deploy.yml
+++ b/.github/workflows/update-and-deploy.yml
@@ -1,9 +1,12 @@
 name: Update data and deploy
 
 on:
+  push:
+    branches:
+      - main
   schedule:
     # Every 8 hours (UTC)
-    - cron: "0 */8 * * *"
+    - cron: "0 */4 * * *"
   workflow_dispatch: {}
 
 permissions:
