feat(workflow): 添加Amazon PA-API配置和环境变量支持
- 在GitHub Actions工作流中添加Amazon相关环境变量配置
- 支持AMAZON_ASSOCIATE_TAG、AMAZON_PAAPI_ACCESS_KEY等变量
- 通过vars和secrets实现灵活的配置管理

feat(amazon): 集成Amazon商店模块功能

- 新增Amazon商店页面(/shop/)，显示Amazon联盟链接
- 添加updateAmazonData函数处理Amazon数据更新
- 支持PA-API获取商品标题、图片、价格等信息
- 实现链接模式和API模式两种数据获取方式

docs(readme): 更新Amazon模块配置说明

- 添加Amazon商店模块的详细配置指南
- 说明PA-API访问要求和使用注意事项
- 提供环境变量和配置文件的设置说明

feat(i18n): 添加商店页面国际化支持

- 为商店导航和页面内容添加中英文翻译
- 包含商店标题、副标题、操作按钮等文案

style(shop): 添加商店页面样式和布局

- 创建商品网格布局.shop-grid和商品卡片样式
- 设计商品缩略图、标题、操作按钮等组件样式
- 实现响应式布局和悬停效果

--- a/.github/workflows/update-and-deploy.yml
+++ b/.github/workflows/update-and-deploy.yml
@@ -93,6 +93,14 @@ jobs:
         run: npm run update
         env:
           ARCHIVE_OLD: "1"
+          AMAZON_ASSOCIATE_TAG: ${{ vars.AMAZON_ASSOCIATE_TAG || secrets.AMAZON_ASSOCIATE_TAG }}
+          AMAZON_MARKETPLACE_DOMAIN: ${{ vars.AMAZON_MARKETPLACE_DOMAIN }}
+          AMAZON_PAAPI_ACCESS_KEY: ${{ secrets.AMAZON_PAAPI_ACCESS_KEY }}
+          AMAZON_PAAPI_SECRET_KEY: ${{ secrets.AMAZON_PAAPI_SECRET_KEY }}
+          AMAZON_PAAPI_PARTNER_TAG: ${{ vars.AMAZON_PAAPI_PARTNER_TAG || secrets.AMAZON_PAAPI_PARTNER_TAG }}
+          AMAZON_PAAPI_HOST: ${{ vars.AMAZON_PAAPI_HOST }}
+          AMAZON_PAAPI_REGION: ${{ vars.AMAZON_PAAPI_REGION }}
+          AMAZON_PAAPI_MARKETPLACE: ${{ vars.AMAZON_PAAPI_MARKETPLACE }}
 
       - name: Upload archives (if any)
         uses: actions/upload-artifact@v4
@@ -126,6 +134,8 @@ jobs:
           ANALYTICS_PROVIDER: ${{ vars.ANALYTICS_PROVIDER || secrets.ANALYTICS_PROVIDER }}
           CLOUDFLARE_WEB_ANALYTICS_TOKEN: ${{ vars.CLOUDFLARE_WEB_ANALYTICS_TOKEN || secrets.CLOUDFLARE_WEB_ANALYTICS_TOKEN }}
           GA_MEASUREMENT_ID: ${{ vars.GA_MEASUREMENT_ID || secrets.GA_MEASUREMENT_ID }}
+          AMAZON_ASSOCIATE_TAG: ${{ vars.AMAZON_ASSOCIATE_TAG || secrets.AMAZON_ASSOCIATE_TAG }}
+          AMAZON_MARKETPLACE_DOMAIN: ${{ vars.AMAZON_MARKETPLACE_DOMAIN }}
 
       - name: Configure Pages
         uses: actions/configure-pages@v5
