--- a/site.config.json
+++ b/site.config.json
@@ -4,7 +4,7 @@
   "tagline": "Cloud-ready, open and use anytime",
   "description": "Cloud-first utilities and a lightweight info stream — available anywhere, ready when you are.",
   "defaultLanguage": "en",
-  "languages": ["en"],
+  "languages": ["en","中文"],
   "languageLabels": {
     "en": "EN",
     "zh": "中文"
